--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ past.margin-top: 10vh;
 
 body {
     /* #98ff98 = (120, 100%, 80%)*/
-    background-color:	hsl(69, 96%, 55%);
+    background-color: #008000;
 }
 
 .weirdHeader {
